chore: upgrade to Java 21
Closes: MODMARCMIG-42